[gd_scene load_steps=5 format=3 uid="uid://6fin8skkxlbd"]

[ext_resource type="Theme" uid="uid://45421sp47ao" path="res://scenes/ui/main_menu.tres" id="1_f4dvf"]
[ext_resource type="Script" path="res://scenes/ui/PouseMenu.gd" id="1_tu6ds"]

[sub_resource type="Animation" id="Animation_1wtgg"]
resource_name = "unpaused"
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tedgg"]
_data = {
"unpaused": SubResource("Animation_1wtgg")
}

[node name="ColorRect" type="ColorRect"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_f4dvf")
color = Color(1, 1, 1, 0)
script = ExtResource("1_tu6ds")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(512, 252)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "PAUZA"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "WZNÓW"

[node name="Save" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Zapisz"

[node name="Main menu" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "DO MENU"

[node name="Unstuck" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Unstack!"

[node name="Host" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Host"

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ZAMKNIJ"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tedgg")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "
WASD - poruszanie się
SPACE - skok
SHIFT - sprint
alt - kucanie / wślizg
Q, E - wychylenie kamery
Tab - Inwentarz
interakcja - LPM
Obrót obiektu / wolna kamera  - ŚPM
Rzut - PRM
"

[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Main menu" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Unstuck" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
